--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="javascript.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div id="gameboard">
-        
-    </div>
-    
+    <div class="container">
+        <h1 class="turn"></div>
+        <div class="board"></div>
+      </div>  
+      <script src="javascript.js"></script>
 </body>
 </html>
