--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="turn"></div>
+        <h1 class="turn"></h1>
         <div class="board"></div>
-      </div>  
-      <script src="javascript.js"></script>
+        <h1 class="result"></h1>
+    </div>  
+    <script src="javascript.js"></script>
 </body>
 </html>
